--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>Runner</mainClass>
+                            <mainClass>pl.marcinm312.Runner</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
